[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/props/interactable/stats/background/mapa.png" type="Texture" id=1]
[ext_resource path="res://assets/props/interactable/stats/background/game_over.png" type="Texture" id=2]
[ext_resource path="res://assets/props/interactable/stats/background/button_play.png" type="Texture" id=3]
[ext_resource path="res://scripts/interactable/general/game_over.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/bit_potion.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/props/interactable/stats/background/button.png" type="Texture" id=6]
[ext_resource path="res://scripts/interactable/general/over.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=35]
size = 15
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=37]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 28, 14 )

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -26.0
margin_top = -28.0
margin_right = 14.0
margin_bottom = 12.0
rect_scale = Vector2( 1.2, 1.2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -6.66667
margin_top = -10.0
margin_right = 324.333
margin_bottom = 207.0
color = Color( 0, 0, 0, 0.243137 )

[node name="GameOver" type="Sprite" parent="Control"]
position = Vector2( 154, 80 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="Control"]
margin_left = 130.0
margin_top = 115.0
margin_right = 170.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 35 )
custom_styles/focus = SubResource( 37 )
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Mapa" type="Button" parent="Control"]
margin_left = 88.0
margin_top = 104.0
margin_right = 137.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 35 )
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[node name="anim" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
anims/RESET = SubResource( 36 )
anims/show = SubResource( 3 )

[connection signal="mouse_entered" from="Control/Button" to="Control" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Button" to="Control" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Mapa" to="Control" method="_on_Mapa_pressed"]
